# wordprobe

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/db/: _README.txt  past_games.pkl  valid_answers.pkl
wordler/: __init__.py  constraints.py  core.py  db.py  heuristics.py  models.py  search.py  sessions.py  utils.py
wordprobe/: __init__.py  abstract.py  constants.py  constraints.py  core.py  db.py  descriptors.py  heuristics.py  models.py  search.py  stats.py  transforms.py
