[build-system]
requires = ["pip", "setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wordprobe"
authors = [{name = "Ben Ohling", email = "b.ohling@outlook.com"}]
license = {file = "LICENSE"}
description = "An optimized Wordle solver API for testing simulators and solvers against Wordle's answer list."
requires-python = ">=3.12.3"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]
keywords = ["wordle", "wordler", "simulator", "simulate", "solver", "entropy", "probability", "wordprobe"]

[project.urls]
Repository = "https://github.com/Jammin93/wordprobe.git"

[tool.setuptools]
packages = ["wordprobe"]
include-package-data = true

[tool.setuptools.package-data]
include = ["data/db/*", "data/http/"]
exclude = ["data/http/cache.sqlite"]

[tool.setuptools.dynamic]
version = {attr = "wordprobe.__init__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = "requirements.txt"}
optional-dependencies.dev = {file = "requirements-dev.txt"}
